src/form.scss
@use './variables/color' as *;
@use './variables/button' as *;
@use './variables/padding' as *;
@use './variables/text' as *;
@use './variables/border' as *;
@use './variables/margin' as *;
@use './mixins/breakpoints' as *;

/*
 *  Form classes
 *  Component code : fc - form control
 *  Modifier 1 :
 *      lbl - label
 *      inp - input
 *      sz  - size
 *      fi  - form icon
 *      ic  - icon
 *      ig  - input group
 *      md  - Material design look for button
 *
 *  Modifier 2 :
 *      input :
 *          tn  - top naked
 *          n   - naked
 *
 *      size :
 *          s   - small
 *          l   - large
 *
 *      icon :
 *          l   - left
 *          r   - right
 *
 */

$fc-inp-pad-h:10px;
$ic-pad:16px;

input[type="text"],
input[type="select"],
input[type='number'],
input[type='tel'],
input[type='email'],
input[type="password"],
input[type="search"],
textarea, select {
    padding:$bt-m-v $fc-inp-pad-h;
    border:1px solid $bdr-clr;
    background:$clr-bg;
    color:$clr-txt-meta;
    font:inherit;
    width:100%;
    box-sizing:border-box;
    border-radius:$bdr-r-s;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    &:hover {
        border:1px solid $clr-bg-l5;
    }
    &:focus {
        border:1px solid $clr-txt-py;
        background-color: $clr-bg;
    }
    &.l {
       padding:$bt-l-v $fc-inp-pad-h;
    }
    &.fc-inp-tn:hover,&.fc-inp-n:hover,&.fc-inp-tn:focus,&.fc-inp-n:focus {
        border:0;
    }
}
input[type="search"]::-webkit-search-cancel-button {display: none;}
input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0
}
input[type=number] {
    -moz-appearance: textfield
}
*:focus {outline: none;}
.fc-lbl {
    margin-bottom: $m-blk;
    color:$clr-txt-meta;
    display:block;
    @include media-bp-max(l) {
        margin-bottom:4px;
    }
}
input.fc-inp-tn {
    border: 0;
    outline:none;
    border-bottom:1px solid $clr-bg-l2;
    border-bottom-left-radius:0;
    border-bottom-right-radius:0;
    background: $clr-bg;
    &:focus {
        border-bottom-color: $clr-txt-py;
    }
    &:hover {
        border-color: $clr-bg-l5;
    }
}
input.fc-inp-n {
    border:0;
    outline:none;
}
.fc-sz-s {
    font-size:$t-sz-s;
    input {padding:$bt-s-v $fc-inp-pad-h;}
}
.fc-sz-l {
    font-size:$t-sz-l;
    input {padding:$bt-l-v $fc-inp-pad-h;}
}
input.fc-sz-s {
    padding:$bt-s-v $fc-inp-pad-h;
    font-size:$t-sz-s;
}
input.fc-sz-l {
    padding:$bt-l-v $fc-inp-pad-h;
    font-size:$t-sz-l;
}
input[type="checkbox"], input[type="radio"] {
    appearance: none;
    background-color:$clr-bg;
    margin: 0 $m-blk 0 0;
    font: inherit;
    color: currentColor;
    width: calc(1rem + 2px);
    height: calc(1rem + 2px);
    border: 1px solid currentColor;
    display: inline-grid;
    place-content: center;
}
input[type="checkbox"] {border-radius: 4px;}
input[type="checkbox"]:checked {
    background: $clr-txt-py;
}
input[type="checkbox"]:checked,input[type="radio"]:checked {
    color:$clr-txt-py;
    transform: scale(1) translate(0);
}
input[type="checkbox"]:checked::before {
    content: " ";
    background-color:$clr-bg;
    clip-path:polygon( 3.011% 49.107%,31.663% 83.167%,99% 18.5%, 94.44% 7.5%, 32.393% 66.167%, 12.111% 43.107%);
    width: calc(0.65em + 1px);
    height:calc(0.65em + 1px);
    transform: scale(0) translate(-50%);
    transition: 120ms transform ease-in-out;
}
input[type="checkbox"]:checked::before,input[type="radio"]:checked::before {
    color:$clr-bg;
    transform: scale(1);
}
input[type="checkbox"]:disabled,input[type="radio"]:disabled {
    color:$clr-bg-l2;
}
input[type="checkbox"]:disabled::before,input[type="radio"]:disabled::before {
    background:$clr-bg-l2;
}
input[type="radio"] {border-radius: 50%;}
input[type="radio"]::before {
    content: " ";
    background-color:$clr-txt-py;
    border-radius:50%;
    width: calc(0.55em + 1px);
    height:calc(0.55em + 1px);
    transform: scale(0);
    transition: 120ms transform ease-in-out;
}

.fc-fi {
    position:relative;
    display:flex;
    align-items:center;
    max-width:100%;
}
.fc-ic-l {
    left:0;
    position:absolute;
    padding-left:$fc-inp-pad-h;
    + input {padding-left:calc(1em + $ic-pad);}
}
.fc-ic-r {
    right:0;
    position:absolute;
    padding-right:$fc-inp-pad-h;
    + input {padding-right:calc(1em + $ic-pad);}
}
.fc-ig {
    display:flex;
    flex-direction:row;
    & > *:not(:first-child) {margin-left:-1px;}
    & > aalam-dropdown:first-child > [slot="dd-toggler"].bt,
    & > input:first-child,
    & > *:first-child input,
    & > .bt:first-child {
        border-top-right-radius:0;
        border-bottom-right-radius:0;
    }
    & > aalam-dropdown:last-child > [slot="dd-toggler"].bt,
    & > input:last-child,
    & > *:last-child input,
    & > .bt:last-child{
        border-bottom-left-radius:0;
        border-top-left-radius:0;
    }
    & > aalam-dropdown:not(:first-child):not(:last-child) > [slot="dd-toggler"].bt,
    & > input:not(:last-child):not(:first-child),
    & > *:not(:last-child):not(:first-child) input,
    & > .bt:not(:last-child):not(:first-child) {
        border-radius: 0;
    }
    & > *:hover {
        position:relative;
        z-index: 1;
    }
}
.bt.fc-md-outline {
    position:relative;
    padding-top: $pad-m;
    & > label {
        display:block;
        position:absolute;
        top:0;
        transform-origin:left;
        transform: translateY(-50%) scale(0.75);
        background: $clr-bg;
    }
}

